--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
     "boostrap": "^2.0.0",
+    "bootstrap": "^5.3.3",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.10.1",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router": "^6.22.3",
