--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.6.7",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.3",
+    "framer-motion": "^11.0.18",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
